# mospolytech-tg-bot

./: Readme.md  alembic.ini  example.env  pyproject.toml
app/: __init__.py  bot.py
app/core/: __init__.py  commands.py  db.py  redis.py  repository.py  schedule.py  settings.py  states.py
app/exceptions/: __init__.py  api_error.py  invallid_argument.py  schedule.py  too_many_arguments.py
app/filters/: callback_datas.py  commands.py
app/handlers/: __init__.py  main.py  utils.py
app/handlers/other/: __init__.py  basic_commands.py  errors.py  main.py
app/handlers/user/: __init__.py  main.py  schedule.py  subscribtion.py
app/keyboards/inline/: base.py  basic_inline.py  schedule.py
app/middlewares/: __init__.py  acl.py  services.py
app/repositories/: __init__.py  remote.py  subscription.py  user.py
app/services/: __init__.py  schedule.py  subscription.py  user.py
app/utils/: __init__.py  commands.py  date.py  dicts.py  enums.py  models.py  repository.py  texts.py  utils.py
migrations/: env.py
migrations/versions/: a106f2b26f20_.py
